# 2025-hack-vvo-team-14-hackaton

./: Dockerfile
backend/: pyproject.toml
backend/src/: asd.json  main.py
frontend/: nginx.conf  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.js  App.module.css  asd.json  index.js
